syntax = "proto3";

package message_center;


service MessageCenterService {
    rpc GetAllActiveRequest(GetAllActiveRequestRequest) returns (GetAllActiveRequestRespond) {}
    rpc GetActiveRequestByStudent(GetActiveRequestByStudentRequest) returns (stream GetActiveRequestByStudentRespond) {}
    rpc GetActiveRequestByParent(GetActiveRequestByParentRequest) returns (stream GetActiveRequestByParentRespond) {}
    rpc GetRequestHistory(GetRequestHistoryRequest) returns (stream GetRequestHistoryRespond) {}
}

message GetAllActiveRequestRequest {}

message GetAllActiveRequestRespond {
    repeated RequestContent requests = 1;
}

message GetActiveRequestByParentRequest {
    string label = 1;
}

message GetActiveRequestByParentRespond {
    repeated RequestContent requests = 1;
}

message GetActiveRequestByStudentRequest {
    string label = 1;
}

message GetActiveRequestByStudentRespond {
    repeated RequestContent requests = 1;
}

message GetRequestHistoryRequest {}

message GetRequestHistoryRespond {
    repeated RequestHistoryContent history = 1;
}

message RequestContent {
    string id = 1;
    string sid = 2;
    int64 begin = 3;
    int64 end = 4;
}

message RequestHistoryContent {
    string id = 1;
    string label = 2;
    string reason = 3;
    int64 start = 4;
    int64 end = 5;
    int64 timeStamp = 6;
    bool accepted = 7;
}
